feat(java): support JDK 8 (default java.version=8)
Replace Java 9+ APIs with JDK 8-compatible equivalents in ProxyController:
- Set.of(...)               -> Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...)))
- InputStream.readAllBytes  -> private readAll(InputStream) loop
- InputStream.nullInputStream() (Java 11) -> new ByteArrayInputStream(new byte[0])
- ByteArrayOutputStream.toString(Charset) (Java 10) -> new String(toByteArray(), UTF_8)
Set pom java.version=8 so it builds/runs on JDK 8/11/17. Verified on
Temurin 1.8.0_492: bytecode major 52, java -jar boots, end-to-end
proxy+SSE tool-call parse+JSONL logging all pass. README updated.